--- a/configs/RetroArch/config/retroarch/retroarch.cfg
+++ b/configs/RetroArch/config/retroarch/retroarch.cfg
@@ -1,6 +1,6 @@
 accessibility_enable = "false"
 accessibility_narrator_speech_speed = "5"
-ai_service_enable = "true"
+ai_service_enable = "false"
 ai_service_mode = "1"
 ai_service_pause = "false"
 ai_service_source_lang = "0"
@@ -10,10 +10,10 @@ all_users_control_menu = "false"
 apply_cheats_after_load = "false"
 apply_cheats_after_toggle = "false"
 aspect_ratio_index = "22"
-assets_directory = "/app/share/libretro/assets/"
+assets_directory = ":\assets"
 audio_block_frames = "0"
 audio_device = ""
-audio_driver = "pulse"
+audio_driver = "xaudio"
 audio_dsp_plugin = ""
 audio_enable = "true"
 audio_enable_menu = "false"
@@ -22,7 +22,7 @@ audio_enable_menu_cancel = "false"
 audio_enable_menu_notice = "false"
 audio_enable_menu_ok = "false"
 audio_fastforward_mute = "false"
-audio_filter_dir = "/app/lib/retroarch/filters/audio"
+audio_filter_dir = ":\filters\audio"
 audio_latency = "64"
 audio_max_timing_skew = "0.050000"
 audio_mixer_mute_enable = "false"
@@ -35,6 +35,9 @@ audio_resampler = "sinc"
 audio_resampler_quality = "3"
 audio_sync = "true"
 audio_volume = "0.000000"
+audio_wasapi_exclusive_mode = "true"
+audio_wasapi_float_format = "false"
+audio_wasapi_sh_buffer_length = "-16"
 auto_overrides_enable = "true"
 auto_remaps_enable = "true"
 auto_screenshot_filename = "true"
@@ -50,11 +53,11 @@ bundle_assets_extract_enable = "false"
 bundle_assets_extract_last_version = "0"
 bundle_assets_extract_version_current = "0"
 bundle_assets_src_path = ""
-cache_directory = ""
+cache_directory = ":\temp""
 camera_allow = "false"
 camera_device = ""
-camera_driver = "video4linux2"
-cheat_database_path = "/app/share/libretro/database/cht"
+camera_driver = "null"
+cheat_database_path = ":\cheats"
 check_firmware_before_loading = "false"
 cheevos_auto_screenshot = "false"
 cheevos_badges_enable = "false"
@@ -72,17 +75,17 @@ cheevos_unlock_sound_enable = "false"
 cheevos_username = ""
 cheevos_verbose_enable = "true"
 config_save_on_exit = "false"
-content_database_path = "/app/share/libretro/database/rdb"
+content_database_path = ":\database\rdb"
 content_favorites_directory = "default"
-content_favorites_path = "~/.var/app/org.libretro.RetroArch/config/retroarch/content_favorites.lpl"
+content_favorites_path = ":\content_favorites.lpl"
 content_favorites_size = "200"
 content_history_directory = "default"
-content_history_path = "~/.var/app/org.libretro.RetroArch/config/retroarch/content_history.lpl"
+content_history_path = ":\content_history.lpl"
 content_history_size = "200"
 content_image_history_directory = "default"
-content_image_history_path = "~/.var/app/org.libretro.RetroArch/config/retroarch/content_image_history.lpl"
+content_image_history_path = ":\content_image_history.lpl"
 content_music_history_directory = "default"
-content_music_history_path = "~/.var/app/org.libretro.RetroArch/config/retroarch/content_music_history.lpl"
+content_music_history_path = ":\content_music_history.lpl"
 content_runtime_log = "true"
 content_runtime_log_aggregate = "false"
 content_show_add = "true"
@@ -99,9 +102,9 @@ content_show_settings = "true"
 content_show_settings_password = ""
 content_show_video = "true"
 content_video_directory = "default"
-content_video_history_path = "~/.var/app/org.libretro.RetroArch/config/retroarch/content_video_history.lpl"
-core_assets_directory = "~/.var/app/org.libretro.RetroArch/config/retroarch/downloads"
-core_info_cache_enable = "false"
+content_video_history_path = ":\content_video_history.lpl"
+core_assets_directory = ":\downloads"
+core_info_cache_enable = "true"
 core_option_category_enable = "true"
 core_options_path = ""
 core_set_supports_no_game_enable = "true"
@@ -109,7 +112,7 @@ core_updater_auto_backup = "true"
 core_updater_auto_backup_history_size = "1"
 core_updater_auto_extract_archive = "true"
 core_updater_buildbot_assets_url = "http://buildbot.libretro.com/assets/"
-core_updater_buildbot_cores_url = "http://buildbot.libretro.com/nightly/linux/x86_64/latest/"
+core_updater_buildbot_cores_url = "http://buildbot.libretro.com/nightly/windows/x86_64/latest/"
 core_updater_show_experimental_cores = "false"
 crt_switch_center_adjust = "0"
 crt_switch_hires_menu = "false"
@@ -120,16 +123,19 @@ crt_switch_resolution_use_custom_refresh_rate = "false"
 crt_switch_timings = ""
 crt_video_refresh_rate = "60.000000"
 current_resolution_id = "0"
-cursor_directory = "/app/share/libretro/database/cursors"
-custom_viewport_height = "717"
-custom_viewport_width = "956"
-custom_viewport_x = "2"
+cursor_directory = ":\database\cursors"
+custom_viewport_height = "480"
+custom_viewport_width = "720"
+custom_viewport_x = "0"
 custom_viewport_y = "0"
+d3d10_gpu_index = "0"
+d3d11_gpu_index = "0"
+d3d12_gpu_index = "0"
 desktop_menu_enable = "true"
 discord_allow = "false"
 discord_app_id = "475456035851599874"
 driver_switch_enable = "true"
-dynamic_wallpapers_directory = "default"
+dynamic_wallpapers_directory = ":\assets\wallpapers"
 enable_device_vibration = "false"
 facebook_stream_key = ""
 fastforward_frameskip = "true"
@@ -145,7 +151,7 @@ frame_time_counter_reset_after_save_state = "false"
 framecount_show = "false"
 frontend_log_level = "1"
 game_specific_options = "true"
-gamemode_enable = "false"
+gamemode_enable = "true"
 gamma_correction = "0"
 global_core_options = "false"
 history_list_enable = "true"
@@ -215,7 +221,7 @@ input_disk_prev = "nul"
 input_disk_prev_axis = "nul"
 input_disk_prev_btn = "nul"
 input_disk_prev_mbtn = "nul"
-input_driver = "x"
+input_driver = "dinput"
 input_duty_cycle = "3"
 input_enable_hotkey = "nul"
 input_enable_hotkey_axis = "nul"
@@ -242,7 +248,7 @@ input_grab_mouse_toggle_axis = "nul"
 input_grab_mouse_toggle_btn = "nul"
 input_grab_mouse_toggle_mbtn = "nul"
 input_hold_fast_forward = "l"
-input_hold_fast_forward_axis = "null"
+input_hold_fast_forward_axis = "nul"
 input_hold_fast_forward_btn = "nul"
 input_hold_fast_forward_mbtn = "nul"
 input_hold_slowmotion = "e"
@@ -250,24 +256,8 @@ input_hold_slowmotion_axis = "nul"
 input_hold_slowmotion_btn = "nul"
 input_hold_slowmotion_mbtn = "nul"
 input_hotkey_block_delay = "5"
-input_joypad_driver = "sdl2"
+input_joypad_driver = "xinput"
 input_keyboard_layout = ""
-input_libretro_device_p1 = "1"
-input_libretro_device_p10 = "1"
-input_libretro_device_p11 = "1"
-input_libretro_device_p12 = "1"
-input_libretro_device_p13 = "1"
-input_libretro_device_p14 = "1"
-input_libretro_device_p15 = "1"
-input_libretro_device_p16 = "1"
-input_libretro_device_p2 = "1"
-input_libretro_device_p3 = "1"
-input_libretro_device_p4 = "1"
-input_libretro_device_p5 = "1"
-input_libretro_device_p6 = "1"
-input_libretro_device_p7 = "1"
-input_libretro_device_p8 = "1"
-input_libretro_device_p9 = "1"
 input_load_state = "f4"
 input_load_state_axis = "nul"
 input_load_state_btn = "9"
@@ -2698,7 +2688,7 @@ input_recording_toggle_axis = "nul"
 input_recording_toggle_btn = "nul"
 input_recording_toggle_mbtn = "nul"
 input_remap_binds_enable = "true"
-input_remapping_directory = "~/.var/app/org.libretro.RetroArch/config/retroarch/config/remaps"
+input_remapping_directory = ":\config\remaps"
 input_reset = "h"
 input_reset_axis = "nul"
 input_reset_btn = "nul"
@@ -2777,19 +2767,19 @@ input_volume_up = "add"
 input_volume_up_axis = "nul"
 input_volume_up_btn = "nul"
 input_volume_up_mbtn = "nul"
-joypad_autoconfig_dir = "~/.var/app/org.libretro.RetroArch/config/retroarch/autoconfig"
+joypad_autoconfig_dir = ":\autoconfig"
 keyboard_gamepad_enable = "true"
 keyboard_gamepad_mapping_type = "1"
 kiosk_mode_enable = "false"
 kiosk_mode_password = ""
 led_driver = "null"
-libretro_directory = "~/.var/app/org.libretro.RetroArch/config/retroarch/cores"
-libretro_info_path = "/app/share/libretro/info"
+libretro_directory = ":\cores"
+libretro_info_path = ":\info"
 libretro_log_level = "1"
 load_dummy_on_core_shutdown = "true"
 location_allow = "false"
 location_driver = "null"
-log_dir = "~/.var/app/org.libretro.RetroArch/config/retroarch/logs"
+log_dir = ":\logs"
 log_to_file = "false"
 log_to_file_timestamp = "false"
 log_verbosity = "false"
@@ -2881,7 +2871,7 @@ menu_xmb_animation_opening_main_menu = "0"
 menu_xmb_thumbnail_scale_factor = "100"
 menu_xmb_title_margin = "5"
 menu_xmb_vertical_fade_factor = "100"
-midi_driver = "alsa"
+midi_driver = "winmm"
 midi_input = "Off"
 midi_output = "Off"
 midi_volume = "100"
@@ -2960,7 +2950,7 @@ notification_show_screenshot_duration = "0"
 notification_show_screenshot_flash = "0"
 notification_show_set_initial_disk = "false"
 notification_show_when_menu_is_alive = "false"
-overlay_directory = "/app/share/libretro/overlays"
+overlay_directory = ":\overlays"
 ozone_collapse_sidebar = "false"
 ozone_menu_color_theme = "1"
 ozone_scroll_content_metadata = "false"
@@ -2970,7 +2960,7 @@ ozone_truncate_playlist_name = "true"
 pause_nonactive = "true"
 perfcnt_enable = "false"
 playlist_compression = "false"
-playlist_directory = "~/.var/app/org.libretro.RetroArch/config/retroarch/playlists"
+playlist_directory = ":\playlists"
 playlist_entry_remove_enable = "1"
 playlist_entry_rename = "true"
 playlist_fuzzy_archive_match = "false"
@@ -3009,8 +2999,9 @@ quick_menu_show_undo_save_load_state = "true"
 quit_on_close_content = "0"
 quit_press_twice = "true"
 record_driver = "ffmpeg"
-recording_config_directory = "~/.var/app/org.libretro.RetroArch/config/retroarch/records_config"
-recording_output_directory = "~/.var/app/org.libretro.RetroArch/config/retroarch/records"
+recording_config_directory = ":\config\record"
+recording_output_directory = ":\recordings"
+remap_save_on_exit = "true"
 resampler_directory = ""
 rewind_buffer_size = "20971520"
 rewind_buffer_size_step = "10"
@@ -3022,7 +3013,7 @@ rgui_background_filler_thickness_enable = "true"
 rgui_border_filler_enable = "true"
 rgui_border_filler_thickness_enable = "true"
 rgui_browser_directory = "default"
-rgui_config_directory = "~/.var/app/org.libretro.RetroArch/config/retroarch/config"
+rgui_config_directory = ":\config"
 rgui_extended_ascii = "false"
 rgui_inline_thumbnails = "false"
 rgui_internal_upscale_level = "0"
@@ -3042,12 +3033,12 @@ run_ahead_hide_warnings = "false"
 run_ahead_secondary_instance = "true"
 runtime_log_directory = "default"
 save_file_compression = "false"
-savefile_directory = "~/.var/app/org.libretro.RetroArch/config/retroarch/saves"
+savefile_directory = ":\saves"
 savefiles_in_content_dir = "false"
 savestate_auto_index = "false"
 savestate_auto_load = "false"
 savestate_auto_save = "false"
-savestate_directory = "~/.var/app/org.libretro.RetroArch/config/retroarch/states"
+savestate_directory = ":\states"
 savestate_file_compression = "true"
 savestate_max_keep = "0"
 savestate_thumbnail_enable = "false"
@@ -3055,7 +3046,7 @@ savestates_in_content_dir = "false"
 scan_without_core_match = "false"
 screen_brightness = "100"
 screen_orientation = "0"
-screenshot_directory = "~/.var/app/org.libretro.RetroArch/config/retroarch/screenshots"
+screenshot_directory = ":\screenshots"
 screenshots_in_content_dir = "false"
 settings_show_accessibility = "true"
 settings_show_achievements = "true"
@@ -3094,10 +3085,10 @@ stdin_cmd_enable = "false"
 streaming_mode = "0"
 suspend_screensaver_enable = "true"
 sustained_performance_mode = "false"
-system_directory = "/run/media/mmcblk0p1/Emulation/bios/"
+system_directory = ":\bios"
 systemfiles_in_content_dir = "false"
 threaded_data_runloop_enable = "true"
-thumbnails_directory = "~/.var/app/org.libretro.RetroArch/config/retroarch/thumbnails"
+thumbnails_directory = ":\thumbnails"
 twitch_stream_key = ""
 ui_companion_enable = "false"
 ui_companion_start_on_boot = "true"
@@ -3117,7 +3108,7 @@ video_ctx_scaling = "false"
 video_disable_composition = "false"
 video_driver = "vulkan"
 video_filter = ""
-video_filter_dir = "/app/lib/retroarch/filters/video"
+video_filter_dir = ":\filters\video"
 video_font_enable = "true"
 video_font_path = ""
 video_font_size = "32.000000"
@@ -3137,7 +3128,7 @@ video_hdr_enable = "false"
 video_hdr_expand_gamut = "true"
 video_hdr_max_nits = "1000.000000"
 video_hdr_paper_white_nits = "200.000000"
-video_layout_directory = "~/.var/app/org.libretro.RetroArch/config/retroarch/layouts"
+video_layout_directory = ":\layouts"
 video_layout_enable = "true"
 video_layout_path = ""
 video_layout_selected_view = "0"
@@ -3163,7 +3154,7 @@ video_scale = "3.000000"
 video_scale_integer = "false"
 video_scale_integer_overscale = "false"
 video_shader_delay = "0"
-video_shader_dir = "/app/share/libretro/shaders"
+video_shader_dir = ":\shaders"
 video_shader_enable = "true"
 video_shader_preset_save_reference_enable = "true"
 video_shader_remember_last_dir = "false"
