--- a/configs/RetroArch/retroarch.cfg
+++ b/configs/RetroArch/retroarch.cfg
@@ -53,7 +53,7 @@ bundle_assets_extract_enable = "false"
 bundle_assets_extract_last_version = "0"
 bundle_assets_extract_version_current = "0"
 bundle_assets_src_path = ""
-cache_directory = ":\temp""
+cache_directory = ":\temp"
 camera_allow = "false"
 camera_device = ""
 camera_driver = "null"
@@ -223,7 +223,7 @@ input_disk_prev_btn = "nul"
 input_disk_prev_mbtn = "nul"
 input_driver = "dinput"
 input_duty_cycle = "3"
-input_enable_hotkey = "nul"
+input_enable_hotkey = "escape"
 input_enable_hotkey_axis = "nul"
 input_enable_hotkey_btn = "4"
 input_enable_hotkey_mbtn = "nul"
@@ -2996,7 +2996,7 @@ quick_menu_show_start_streaming = "true"
 quick_menu_show_streaming = "true"
 quick_menu_show_take_screenshot = "true"
 quick_menu_show_undo_save_load_state = "true"
-quit_on_close_content = "0"
+quit_on_close_content = "2"
 quit_press_twice = "true"
 record_driver = "ffmpeg"
 recording_config_directory = ":\config\record"
@@ -3012,7 +3012,7 @@ rgui_aspect_ratio_lock = "0"
 rgui_background_filler_thickness_enable = "true"
 rgui_border_filler_enable = "true"
 rgui_border_filler_thickness_enable = "true"
-rgui_browser_directory = "default"
+rgui_browser_directory = ":\roms"
 rgui_config_directory = ":\config"
 rgui_extended_ascii = "false"
 rgui_inline_thumbnails = "false"
@@ -3036,8 +3036,8 @@ save_file_compression = "false"
 savefile_directory = ":\saves"
 savefiles_in_content_dir = "false"
 savestate_auto_index = "false"
-savestate_auto_load = "false"
-savestate_auto_save = "false"
+savestate_auto_load = "true"
+savestate_auto_save = "true"
 savestate_directory = ":\states"
 savestate_file_compression = "true"
 savestate_max_keep = "0"
