Add/update PPSSPP config

--- a/configs/PPSSPP/memstick/PSP/SYSTEM/ppsspp.ini
+++ b/configs/PPSSPP/memstick/PSP/SYSTEM/ppsspp.ini
@@ -5,7 +5,7 @@ Enable Logging = True
 AutoRun = True
 Browse = False
 IgnoreBadMemAccess = True
-CurrentDirectory = /home
+CurrentDirectory = %%PPSSPPGAMEDIR%%
 ShowDebuggerOnLoad = False
 CheckForNewVersion = True
 Language = en_US
@@ -63,6 +63,12 @@ RemoteISOSubdir = /
 RemoteDebuggerOnStartup = False
 InternalScreenRotation = 1
 BackgroundAnimation = 1
+TopMost = False
+WindowX = -1
+WindowY = -1
+WindowWidth = 0
+WindowHeight = 0
+PauseOnLostFocus = False
 PauseWhenMinimized = False
 DumpDecryptedEboots = False
 MemStickInserted = True
@@ -89,6 +95,7 @@ GraphicsBackend = 3 (VULKAN)
 FailedGraphicsBackends = 
 DisabledGraphicsBackends = 
 VulkanDevice = 
+D3D11Device = 
 CameraDevice = 
 RenderingMode = 1
 SoftwareRenderer = False
@@ -193,6 +200,7 @@ Custom9Image = 4
 Custom9Shape = 1
 Custom9Toggle = False
 ShowTouchPause = False
+IgnoreWindowsKey = False
 ShowTouchControls = False
 DisableDpadDiagonals = False
 GamepadOnlyFocused = False
@@ -316,7 +324,7 @@ QuickChat5 = Quick Chat 5
 PSPModel = 1
 PSPFirmwareVersion = 660
 NickName = PPSSPP
-MacAddress = ec:fd:62:d4:ec:73
+MacAddress = 14:ac:22:8b:9f:6a
 Language = 1
 ParamTimeFormat = 0
 ParamDateFormat = 0
@@ -325,6 +333,7 @@ DayLightSavings = False
 ButtonPreference = 1
 LockParentalLevel = 0
 WlanAdhocChannel = 0
+BypassOSKWithKeyboard = False
 WlanPowerSave = False
 EncryptSave = True
 SavedataUpgradeVersion = True
