change PPSSPP CurrentDirectory to relative path.

--- a/configs/PPSSPP/memstick/PSP/SYSTEM/ppsspp.ini
+++ b/configs/PPSSPP/memstick/PSP/SYSTEM/ppsspp.ini
@@ -5,7 +5,7 @@ Enable Logging = True
 AutoRun = True
 Browse = False
 IgnoreBadMemAccess = True
-CurrentDirectory = %%PPSSPPGAMEDIR%%
+CurrentDirectory = ./memstick/PSP/GAME/
 ShowDebuggerOnLoad = False
 CheckForNewVersion = True
 Language = en_US
