fix bad path for cemu in srm

--- a/configs/SteamRomManager/userData/userConfigurations.json
+++ b/configs/SteamRomManager/userData/userConfigurations.json
@@ -1169,7 +1169,7 @@
     "parserType": "Glob",
     "configTitle": "WiiU - Cemu (.rpx)",
     "steamCategory": "${WiiU}",
-    "executableArgs": "-f -g \"Z:${filepath}\"",
+    "executableArgs": "-f -g \"${filepath}\"",
     "executableModifier": "\"${exePath}\"",
     "romDirectory": "${srmdir}${/}roms${/}wiiu",
     "steamDirectory": "${srmdir}${/}steam",
@@ -1222,7 +1222,7 @@
     "parserType": "Glob",
     "configTitle": "WiiU - Cemu (.wud, .wux, .wua)",
     "steamCategory": "${WiiU}",
-    "executableArgs": "-f -g \"Z:${filepath}\"",
+    "executableArgs": "-f -g \"${filepath}\"",
     "executableModifier": "\"${exePath}\"",
     "romDirectory": "${srmdir}${/}roms${/}wiiu",
     "steamDirectory": "${srmdir}${/}steam",
