Support for new C: root based junction

--- a/configs/PPSSPP/memstick/PSP/SYSTEM/ppsspp.ini
+++ b/configs/PPSSPP/memstick/PSP/SYSTEM/ppsspp.ini
@@ -5,7 +5,7 @@ Enable Logging = True
 AutoRun = True
 Browse = False
 IgnoreBadMemAccess = True
-CurrentDirectory = ./memstick/PSP/GAME/
+CurrentDirectory = C:/Emulation/storage/ppsspp/memstick/PSP/GAME/
 ShowDebuggerOnLoad = False
 CheckForNewVersion = True
 Language = en_US
