--- a/configs/RetroArch/retroarch.cfg
+++ b/configs/RetroArch/retroarch.cfg
@@ -3012,7 +3012,7 @@ rgui_aspect_ratio_lock = "0"
 rgui_background_filler_thickness_enable = "true"
 rgui_border_filler_enable = "true"
 rgui_border_filler_thickness_enable = "true"
-rgui_browser_directory = ":\roms"
+rgui_browser_directory = "C:\Emulation\roms"
 rgui_config_directory = ":\config"
 rgui_extended_ascii = "false"
 rgui_inline_thumbnails = "false"
@@ -3033,12 +3033,12 @@ run_ahead_hide_warnings = "false"
 run_ahead_secondary_instance = "true"
 runtime_log_directory = "default"
 save_file_compression = "false"
-savefile_directory = ":\saves"
+savefile_directory = "C:\Emulation\saves\retroarch"
 savefiles_in_content_dir = "false"
 savestate_auto_index = "false"
 savestate_auto_load = "true"
 savestate_auto_save = "true"
-savestate_directory = ":\states"
+savestate_directory = "C:\Emulation\states\retroarch"
 savestate_file_compression = "true"
 savestate_max_keep = "0"
 savestate_thumbnail_enable = "false"
@@ -3085,7 +3085,7 @@ stdin_cmd_enable = "false"
 streaming_mode = "0"
 suspend_screensaver_enable = "true"
 sustained_performance_mode = "false"
-system_directory = ":\bios"
+system_directory = "C:\Emulation\bios\retroarch"
 systemfiles_in_content_dir = "false"
 threaded_data_runloop_enable = "true"
 thumbnails_directory = ":\thumbnails"
