--- a/configs/PCSX2/inis/PCSX2_vm.ini
+++ b/configs/PCSX2/inis/PCSX2_vm.ini
@@ -4,9 +4,7 @@ CdvdDumpBlocks=disabled
 CdvdShareWrite=disabled
 EnablePatches=enabled
 EnableCheats=disabled
-EnablePINE=disabled
-EnableWideScreenPatches=enabled
-EnableRecordingTools=disabled
+EnableWideScreenPatches=disabled
 ConsoleToStdio=disabled
 HostFs=disabled
 BackupSavestate=enabled
@@ -14,7 +12,6 @@ McdEnableEjection=enabled
 McdFolderAutoManage=enabled
 MultitapPort0_Enabled=disabled
 MultitapPort1_Enabled=disabled
-GzipIsoIndexTemplate=$(f).pindex.tmp
 [EmuCore/Speedhacks]
 EECycleRate=0
 EECycleSkip=0
@@ -22,8 +19,7 @@ fastCDVD=disabled
 IntcStat=enabled
 WaitLoop=enabled
 vuFlagHack=enabled
-vuThread=enabled
-vu1Instant=enabled
+vuThread=disabled
 [EmuCore/CPU]
 FPU.DenormalsAreZero=enabled
 FPU.FlushToZero=enabled
@@ -37,6 +33,8 @@ EnableIOP=enabled
 EnableEECache=disabled
 EnableVU0=enabled
 EnableVU1=enabled
+UseMicroVU0=enabled
+UseMicroVU1=enabled
 vuOverflow=enabled
 vuExtraOverflow=disabled
 vuSignOverflow=disabled
@@ -48,31 +46,35 @@ StackFrameChecks=disabled
 PreBlockCheckEE=disabled
 PreBlockCheckIOP=disabled
 [EmuCore/GS]
+SynchronousMTGS=disabled
 VsyncQueueSize=2
 FrameLimitEnable=enabled
 FrameSkipEnable=disabled
 VsyncEnable=0
+LimitScalar=1.00
 FramerateNTSC=59.94
-FrameratePAL=50
+FrameratePAL=50.00
 FramesToDraw=2
 FramesToSkip=2
 [EmuCore/Gamefixes]
 VuAddSubHack=disabled
+VuClipFlagHack=disabled
+FpuCompareHack=disabled
 FpuMulHack=disabled
 FpuNegDivHack=disabled
 XgKickHack=disabled
+IPUWaitHack=disabled
 EETimingHack=disabled
-SoftwareRendererFMVHack=disabled
 SkipMPEGHack=disabled
 OPHFlagHack=disabled
 DMABusyHack=disabled
 VIFFIFOHack=disabled
 VIF1StallHack=disabled
 GIFFIFOHack=disabled
+FMVinSoftwareHack=disabled
 GoemonTlbHack=disabled
-IbitHack=disabled
-VUSyncHack=disabled
-VUOverflowHack=disabled
+ScarfaceIbit=disabled
+CrashTagTeamRacingIbit=disabled
 [EmuCore/Profiler]
 Enabled=disabled
 RecBlocks_EE=enabled
@@ -84,30 +86,10 @@ ShowDebuggerOnStart=disabled
 AlignMemoryWindowStart=enabled
 FontWidth=8
 FontHeight=12
-WindowWidth=0
-WindowHeight=0
+WindowWidth=1000
+WindowHeight=740
 MemoryViewBytesPerRow=16
 [EmuCore/TraceLog]
 Enabled=disabled
 EE.bitset=0
 IOP.bitset=0
-[DEV9]
-[DEV9/Eth]
-EthEnable=disabled
-EthApi=Unset
-EthDevice=
-EthLogDNS=disabled
-InterceptDHCP=disabled
-PS2IP=0.0.0.0
-Mask=0.0.0.0
-Gateway=0.0.0.0
-DNS1=0.0.0.0
-DNS2=0.0.0.0
-AutoMask=enabled
-AutoGateway=enabled
-AutoDNS1=enabled
-AutoDNS2=enabled
-[DEV9/Hdd]
-HddEnable=disabled
-HddFile=DEV9hdd.raw
-HddSizeSectors=83886080
